--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -45,6 +45,30 @@
 % ...
 %%%%%
 
+\definecolor{bluekeywords}{rgb}{0.13,0.13,1}
+\definecolor{greencomments}{rgb}{0,0.5,0}
+\definecolor{redstrings}{rgb}{0.9,0,0}
+
+\lstdefinestyle{helium}{
+  language=[Objective]Caml,
+  columns=fixed,
+  %% showspaces=false,
+  %% showtabs=false,
+  showstringspaces=false,
+  %% breakatwhitespace=true,
+  escapeinside={(*@}{@*)},
+  commentstyle=\color{greencomments},
+  keywordstyle=\color{bluekeywords},
+  stringstyle=\color{redstrings},
+  basicstyle=\ttfamily\small,%scriptsize,
+  mathescape=true,
+  literate={->}{$\rightarrow{}$}{1}
+           {=>}{$\Rightarrow{}$}{1}
+           %% {++}{+\kern-1.3ex+\kern0.8ex}{1}
+           {==}{$={}$}{1},
+  morekeywords={signature,handle,handler,resume,return,finally}
+}
+
 \begin{document}
 
 %%%%% POCZĄTEK ZASADNICZEGO TEKSTU PRACY
